2008-09-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* message.el (message-confirm-send): Fixed variable documentation to
	avoid the "y/n" wording.

2008-09-25  Francis Litterio <flitterio@gmail.com>  (tiny change)

	* message.el (message-set-auto-save-file-name): Save to a different
	filename so multiple messages (especially drafts) can be recovered.

2008-09-24  Teodor Zlatanov  <tzz@lifelogs.com>

	* message.el (message-confirm-send): Add appropriate version.

2008-09-22  Teodor Zlatanov  <tzz@lifelogs.com>

	* mm-view.el (mm-pkcs7-enveloped-magic): Fix extra parenthesis in
	defvar.

2008-09-22  Daiki Ueno  <ueno@unixuser.org>

	* mm-view.el (mm-pkcs7-signed-magic): Use literals.
	(mm-pkcs7-enveloped-magic): Ditto.

2008-09-17  Simon Josefsson  <simon@josefsson.org>

	* sieve-manage.el (sieve-manage-is-string): Accept literals too.
	Reported by Arnt Gulbrandsen <arnt@oryx.com>.

2008-09-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-use-long-group-names): Make t the
	default, it's better.

2008-09-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sum.el (gnus-summary-insert-line): Trap errors on setting the
	summary line gnus-number property and ignore them (with a warning
	message).

2008-09-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-make-useful-group): Don't use the compiler
	macro caddr in the interactive form since it won't be expanded.

2008-09-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-set-charset-parameters): Add new argument
	`charset'; fix name of function called recursively.
	(gnus-mime-view-part-as-charset): Don't bind gnus-newsgroup-charset.

2008-09-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-strip-charset-parameters): Remove.
	(gnus-mime-set-charset-parameters): New function.
	(gnus-mime-view-part-as-charset): Use it to correctly display part
	specifying wrong charset.

2008-09-08  David Engster  <dengste@eml.cc>
